--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-    
   },
   "dependencies": {
     "framer-motion": "^11.11.15",
-    "next": "^15.0.3",
+    "next": "^15.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3next dev.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
