--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3next dev.8.1"
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
